using UnityEditor;
using UnityEngine;

namespace Assets.Scripts.Constants
{
    public static class AnimatorStrings
    {
        public const string IsMoving = "isMoving";
        public const string IsRunning = "isRunning";
        public const string IsGrounded = "isGrounded";
        public const string yVelocity = "yVelocity";
        public const string Jump = "jump";
        public const string IsOnWall = "isOnWall";
        public const string IsOnCeiling = "isOnCeiling";
    }
}